Added a health-bar

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
+
 {
   "name": "battle_city",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "http-server -c-1 .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "battle_city": "file:",
     "http-server": "^14.1.1",
     "phaser": "^3.80.1"
   }
 }
+
